# QtService

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/service/: CMakeLists.txt
examples/service/AndroidServiceTest/: CMakeLists.txt
examples/service/EchoControl/: CMakeLists.txt
examples/service/EchoService/: CMakeLists.txt
examples/service/TerminalService/: CMakeLists.txt
modules/: QtService  QtServiceDepends  QtServiceVersion  Service  ServiceBackend  ServiceControl  ServicePlugin  Terminal
scripts/: build_win.bat
src/plugins/servicebackends/windows/: CMakeLists.txt
src/service/: CMakeLists.txt  service.cpp  service.h  servicebackend.h  servicecontrol.h
src/service/cmake/: Qt6ServiceConfig.cmake.in
